--- a/.github/workflows/main_ Dmytro_Nosatskyi.yml
+++ b/.github/workflows/main_ Dmytro_Nosatskyi.yml
@@ -34,3 +34,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      # Runs my emoticon
+      - name: Run emoticon
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."  
+          
