--- a/.github/workflows/main_ Dmytro_Nosatskyi.yml
+++ b/.github/workflows/main_ Dmytro_Nosatskyi.yml
@@ -22,6 +22,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      -run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v1
 
