--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -24,10 +24,16 @@ jobs:
     steps:
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hi, Dmytro Nosatskyi!
+        run: echo Hi, Welcome!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project Dmytro Nosatskyi.
+          echo test, and deploy your project.
+  my_name:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest  
+    steps:
+    - name: first name
+      run: echo Dmytro Nosatskyi!
