--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -35,5 +35,5 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest  
     steps:
-    - name: first name
+    - name: Run first name
       run: echo Dmytro Nosatskyi!
