--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-  my_name:
+  my_first_name:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest  
     steps:
